--- a/Solution/Client/src/styles.scss
+++ b/Solution/Client/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+@import 'material-symbols';
+
+* {
+    font-family: 'Poppins';
+    box-sizing: border-box;
+    outline: none;
+}
+
+html, body {
+    padding: 0;
+    margin: 0;
+}
