--- a/Solution/Client/src/styles.scss
+++ b/Solution/Client/src/styles.scss
@@ -5,9 +5,11 @@
     font-family: 'Poppins';
     box-sizing: border-box;
     outline: none;
-}
-
-html, body {
     padding: 0;
     margin: 0;
+}
+
+a {
+    color: unset;
+    text-decoration: none;
 }
