--- a/Solution/Client/src/app/app.component.scss
+++ b/Solution/Client/src/app/app.component.scss
@@ -1,22 +1,1 @@
-// Flex
-@mixin flex($jc, $ai, $g) {
-    display: flex;
-    justify-content: $jc;
-    align-items: $ai;
-    gap: $g;
-}
-
-// Font
-@mixin font($fs, $fw) {
-
-    font: {
-        size: $fs;
-        weight: $fw;
-    }
-}
-
-// Size
-@mixin size($w, $h) {
-    width: $w;
-    height: $h;
-}
+@import "styles/color", "styles/interpolation";
