--- a/Solution/Client/src/app/shared/layout/layout.component.scss
+++ b/Solution/Client/src/app/shared/layout/layout.component.scss
@@ -4,5 +4,6 @@
     @include size(100vw, 100vh);
     display: grid;
     grid-template-columns: calc(100vw / 6) auto;
+    background: linear-gradient($blue-800, $blue-900);
     overflow: hidden;
 }
