--- a/Solution/Client/src/app/modules/proposals/proposals.component.scss
+++ b/Solution/Client/src/app/modules/proposals/proposals.component.scss
@@ -51,7 +51,7 @@ header {
     @include size(max-content, 3rem);
     color: $white;
     background-color: $blue;
-    padding: 3px 0.5rem 3px 3px;
+    padding: 3px 1rem 3px 3px;
     text-align: center;
     cursor: pointer;
     transition: 0.3s all;
@@ -66,11 +66,34 @@ header {
     }
 }
 
+// Tab
+.tab {
+    @include size(100%, max-content);
+    margin: 3rem 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+
+    p {
+        color: $white;
+        padding: 1rem;
+        text-align: center;
+        border-bottom: 2px solid rgba($blue, 0.2);
+        transition: 0.3s all;
+        cursor: pointer;
+
+        &:hover { border-color: $blue; }
+
+        &.selected {
+            border-color: $blue;
+            background-color: $blue-800;
+        }
+    }
+}
+
 // Table
 table {
     @include size(100%, 100%);
     color: $gray-500;
-    margin-top: 5rem;
     border-collapse: collapse;
 
     text: {
