material-class.module added.

--- a/Solution/Client/src/app/shared/left-menu/left-menu.component.html
+++ b/Solution/Client/src/app/shared/left-menu/left-menu.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <code><i class="material-symbols-outlined">energy_program_time_used</i>
+    <code><i>energy_program_time_used</i>
         Solario
     </code>
     <div>
