--- a/Solution/Client/src/app/modules/proposals/proposals.component.html
+++ b/Solution/Client/src/app/modules/proposals/proposals.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="create">
                 <i>add</i>
-                CREATE PROPOSAL
+                Create Proposals
             </div>
         </div>
     </header>
